# constellation

./: CMakeLists.txt
src/: binaryreader.cpp  binaryreader.h  constellationwidget.cpp  constellationwidget.h  constellationwindow.cpp  constellationwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
